--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <div class="header__wrapper">
         <h1 class="header__heading">Play Higher or Lower</h1>
-        <h2 class="header__subheading">How in a row can you get?</h2>
+        <h2 class="header__subheading">How many in a row can you get?</h2>
       </div>
     </header>
     <main>
